Enable multi-user on Cuttlefish virtual device
Bug: 141948028
Bug: 151749899
Test: Build + Launch + Test Enabling Multi-user
Change-Id: Id97e1e1b4ef8c4f7710743b219cfaa6eda4a16db
(cherry picked from commit 2209c6b703b8dbeab1a642e3b47536517d24160c)

--- a/vsoc_arm64/phone/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/vsoc_arm64/phone/overlay/frameworks/base/core/res/res/values/config.xml
@@ -43,6 +43,8 @@
   <bool name="config_showNavigationBar" translatable="false">true</bool>
   <dimen name="config_viewConfigurationTouchSlop" translatable="false">12dp</dimen>
   <integer name="config_mobile_mtu" translatable="false">1460</integer>
+  <!--  Whether Multiuser UI should be shown -->
+  <bool name="config_enableMultiUserUI" translatable="false">true</bool>
   <!--  Maximum number of supported users -->
   <integer name="config_multiuserMaximumUsers" translatable="false">4</integer>
 
