Enable multi-user on Cuttlefish virtual device
Bug: 141948028
Bug: 151749899
Test: Build + Launch + Test Enabling Multi-user
Change-Id: Id97e1e1b4ef8c4f7710743b219cfaa6eda4a16db
(cherry picked from commit 2209c6b703b8dbeab1a642e3b47536517d24160c)

--- a/vsoc_arm64/phone/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/vsoc_arm64/phone/overlay/frameworks/base/core/res/res/values/config.xml
@@ -47,6 +47,8 @@
   <!-- cuttlefish uses mac80211-hwsim, which does not support the Preferred
   Network Offload feature. The below config disables the use of this feature. -->
   <bool name="config_wifi_background_scan_support" translatable="false">false</bool>
+  <!--  Whether Multiuser UI should be shown -->
+  <bool name="config_enableMultiUserUI" translatable="false">true</bool>
   <!--  Maximum number of supported users -->
   <integer name="config_multiuserMaximumUsers" translatable="false">4</integer>
 </resources>
