--- a/vsoc_arm64/phone/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/vsoc_arm64/phone/overlay/frameworks/base/core/res/res/values/config.xml
@@ -45,4 +45,11 @@
   <integer name="config_mobile_mtu" translatable="false">1460</integer>
   <!--  Maximum number of supported users -->
   <integer name="config_multiuserMaximumUsers" translatable="false">4</integer>
+
+  <!-- TODO(bohu) enable the following when modem simualtor is used -->
+  <!--
+  <string name="config_mms_user_agent" translatable="false">CuttlefishNexus</string>
+  <string name="config_mms_user_agent_profile_url" translatable="false">http://gsm.lge.com/html/gsm/Nexus5-M3.xml</string>
+  -->
+
 </resources>
