[WebRTC] Don't use inline style and/or javascripts
The new http server (libwebsockets) configures a strict Content
Security Policy which forbids its usage. The CSP could be relaxed, but
it's always best to not have inline css and javascript.

Bug: 163011080
Test: run locally
Change-Id: I59cb4c0aa85fe817d83bf558a680242f71a52fb7

--- a/host/frontend/gcastv2/signaling_server/assets/style.css
+++ b/host/frontend/gcastv2/signaling_server/assets/style.css
@@ -78,3 +78,7 @@ section.noscroll div.one {
   background-color: black;
   margin-top: 40px;
 }
+
+#device_connection video {
+  touch-action: none;
+}
