--- a/host/frontend/webrtc_operator/assets/style.css
+++ b/host/frontend/webrtc_operator/assets/style.css
@@ -15,54 +15,15 @@
  */
 
 body {
-    background-color:black
-}
-
-#device_connection {
-  visibility: hidden;
+    background-color:black;
+    margin: 0;
 }
 
 #device_selector {
-  color: whitesmoke;
+    color: whitesmoke;
 }
 #device_selector li.device_entry {
-  cursor: pointer;
-}
-
-.noscroll {
-    touch-action: none;
-}
-
-.one {
-    float: left;
-}
-
-#logcat {
-    display: none;
-    font-family: monospace;
-    padding: 10px;
-}
-
-button.selected {
-    background-color: #aaaaaa;
-    border-style: solid;
-    border-color: #aaaaaa;
-}
-
-
-.noscroll {
-    text-align: center;
-}
-
-section.noscroll div.one {
-    display: inline-block;
-    width: 100%;
-    height: 90%;
-}
-
-#deviceScreen {
-    max-width: 100%;
-    max-height: 100%;
+    cursor: pointer;
 }
 
 #refresh_list {
@@ -73,12 +34,70 @@ section.noscroll div.one {
     margin-left: 10px;
 }
 
-#logcat {
-  color: #aaaaaa;
-  background-color: black;
-  margin-top: 40px;
+
+#device_connection {
+    visibility: hidden;
 }
 
-#device_connection video {
-  touch-action: none;
+#device_connection button.selected {
+    background-color: #aaaaaa;
+    border-style: solid;
+    border-color: #aaaaaa;
+}
+
+#control_view {
+    text-align: left;
+    padding: 10px;
+}
+
+/* Screens >1000px place the device view on the left and the control
+ * view on the right. Other screens have deview view on top and control
+ * view on bottom. */
+@media screen and (min-width: 1000px) {
+    #device_view {
+        float: left;
+        height: 100vh;
+    }
+    #control_view {
+        float: left;
+    }
+}
+
+#deviceScreen {
+    max-width: 100%;
+    max-height: 100%;
+    touch-action: none;
+}
+
+#control_panel {
+    font-family: 'Open Sans', sans-serif;
+}
+
+#control_panel h2 {
+    color: white;
+}
+
+#control_panel button {
+    height: 60px;
+    min-width: 60px;
+    display: inline-block;
+    margin: 10px 10px;
+    font-size: 48px;
+    border-radius: 8px;
+    border: none;
+    background-color: #dbdbdb;
+    transition-duration: 0.2s;
+}
+#control_panel button:hover {
+    background-color: #c9c9c9;
+}
+
+
+#logcat {
+    display: none;
+    font-family: monospace;
+    padding: 10px;
+    color: #aaaaaa;
+    background-color: black;
+    margin-top: 40px;
 }
