Adds the Device Details pane to the WebRTC client.
Only supports static info provided in the device_info dictionary
at device connection time for now.

Bug: 163080005
Test: launch_cvd, observe device details pane below control panel
Test: launch_cvd using different hardware specs (cpu,screen,memory)
Change-Id: If00c172ebf66635b51da5b0417a07caa1a29c754
(cherry picked from commit f3c5dea63fb652ab347054e31488f6ceed29fa03)

--- a/host/frontend/webrtc_operator/assets/style.css
+++ b/host/frontend/webrtc_operator/assets/style.css
@@ -48,6 +48,7 @@ body {
 #control_view {
     text-align: left;
     padding: 10px;
+    min-width: 450px;
 }
 
 /* Screens >1000px place the device view on the left and the control
@@ -92,6 +93,17 @@ body {
     background-color: #c9c9c9;
 }
 
+#device_details {
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    background-color: #383838;
+    margin-top: 20px;
+    padding: 20px;
+    padding-top: 1px;
+}
+#device_details span {
+    white-space: pre;
+}
 
 #logcat {
     display: none;
