Listens and reacts to screen changed events in WebRTC.
- GceService writes screen change events to the kernel log.
- Kernel Log Monitor reads these events, writes JSON events to its
  subscribers.
- [NEW] WebRTC's Kernel Log Events Handler subscribes to kernel log
  events. It forwards screen changed events to the WebRTC client over
  the control channel.
- WebRTC client responds to these events to rotate the screen and update
  the device details view.

(Does not yet support resizing, only rotation.)

NO_TYPO_CHECK=Failing due to library method getFormatedErrorMessages.

Bug: 165944524
Test: Use a guest binary to inject accel data, observe rotation.
Change-Id: I5366dcccbb35618a7257350a4e7394e766ce4f95
(cherry picked from commit 55be4c7ae422ddcd21b8330135470137418dbbda)

--- a/host/frontend/webrtc_operator/assets/style.css
+++ b/host/frontend/webrtc_operator/assets/style.css
@@ -45,12 +45,14 @@ body {
     border-color: #aaaaaa;
 }
 
+#device_view {
+    transition: width 1s;
+}
 #control_view {
     text-align: left;
     padding: 10px;
     min-width: 450px;
 }
-
 /* Screens >1000px place the device view on the left and the control
  * view on the right. Other screens have deview view on top and control
  * view on bottom. */
@@ -63,11 +65,19 @@ body {
         float: left;
     }
 }
+#device_view.landscape {
+    width: 100vh;
+}
 
 #deviceScreen {
     max-width: 100%;
     max-height: 100%;
     touch-action: none;
+    transform-origin: bottom left;
+    transition: transform 1s;
+}
+#deviceScreen.landscape {
+    transform: rotateZ(90deg) translateX(-100vh);
 }
 
 #control_panel {
