Makes rotation and resizing the WebRTC screen more robust.
- Allows for live screen size changes.
- Fixes some rotation bugs caused by screen size changes.

Test: Use rotate button, `adb shell wm size <size>`
Bug: 169796295
Change-Id: I3e3fad4a6454a3c9e8818bd75839b96cfd7feffc
(cherry picked from commit a6e174832619a83027256852f4fb5297c5c24d12)

--- a/host/frontend/webrtc_operator/assets/style.css
+++ b/host/frontend/webrtc_operator/assets/style.css
@@ -59,25 +59,17 @@ body {
 @media screen and (min-width: 1000px) {
     #device_view {
         float: left;
-        height: 100vh;
     }
     #control_view {
         float: left;
     }
 }
-#device_view.landscape {
-    width: 100vh;
-}
 
 #deviceScreen {
-    max-width: 100%;
-    max-height: 100%;
     touch-action: none;
-    transform-origin: bottom left;
+    transform-origin: top right;
     transition: transform 1s;
-}
-#deviceScreen.landscape {
-    transform: rotateZ(90deg) translateX(-100vh);
+    object-fit: cover;
 }
 
 #control_panel {
