--- a/shared/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/shared/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -20,4 +20,5 @@
     <bool name="def_stay_on_while_plugged_in">true</bool>
     <bool name="def_install_non_market_apps">true</bool>
     <bool name="def_package_verifier_enable">false</bool>
+    <bool name="def_accelerometer_rotation">true</bool>
 </resources>
