Shows an error on WebRTC connection failure.
Also adds fine-grained disabling/enabling of buttons:
- All buttons start disabled.
- When the device screen becomes visible, buttons that are not
  known to require adb access are enabled.
- When adb is connected, adb-required buttons are enabled.
- When WebRTC is disconnected, all buttons are disabled.

A future change will add fine-grained adb status messages.

Bug: 170893263
Test: launch_cvd and observe button states
Test: stop_cvd and observe error message and button states
Test: modify cf_webrtc.js to always reject the connection,
      observe immediate error message
Change-Id: Ic2240a59f4a2e18d54c508f3085b279aaa452bca
(cherry picked from commit a25ab5bea41bf32a8e55bb3ec98a1a948ca3e54e)

--- a/host/frontend/webrtc_operator/assets/style.css
+++ b/host/frontend/webrtc_operator/assets/style.css
@@ -80,6 +80,25 @@ body {
     color: white;
 }
 
+#device_view h3 {
+    padding: 30px;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+}
+
+#device_status_message {
+    white-space: pre-line;
+    width: 400px;
+}
+
+#webrtc_status_message {
+    text-align: center;
+    /* White text on dark red background. */
+    background-color: #900000;
+    /* Hidden by default. */
+    display: none;
+}
+
 #control_panel button {
     height: 60px;
     min-width: 60px;
