Display adb connection status under the control panel.
Bug: 170893263
Test: launch_cvd, await and observe green connected message.
Test: launch_cvd -norestart_subprocesses, kill socket_vsock_proxy,
      attempt to use a control panel button that requires adb,
      observe red failed message.
Change-Id: I2c437bb179b3bb6c5d55ce15b88b0d17b0cdfb29
(cherry picked from commit b2cf713e951e7736ef2a91ae3ce36c995f4739e9)

--- a/host/frontend/webrtc_operator/assets/style.css
+++ b/host/frontend/webrtc_operator/assets/style.css
@@ -114,6 +114,24 @@ body {
     background-color: #c9c9c9;
 }
 
+#adb_status_message {
+    padding: 10px;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+}
+#adb_status_message.connecting {
+    /* dark yellow */
+    background-color: #927836;
+}
+#adb_status_message.error {
+    /* dark red */
+    background-color: #900000;
+}
+#adb_status_message.connected {
+    /* dark green */
+    background-color: #007000;
+}
+
 #device_details {
     font-family: 'Open Sans', sans-serif;
     color: white;
